--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html ng-app="store">
 <head>
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css"/>
-  <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/style.css">
 </head>
 <body>
-
-  <p> Test </p>
-  <p>{{"Hello" + " you"}}</p>
-
+  <div ng-controller="StoreController as store" class="item">
+    <h1> {{store.product.name}} </h1>
+    <h2> Price: {{store.product.price}} </h2>
+    <p>  <b>Description:</b><br/> {{store.product.description}} </p>
+  </div>
+  <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
